--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=5" />
   <link rel="icon" href="devchallenges.png" />
   <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
+  <link rel="stylesheet" href="./styles/css/styles.css">
   <title>Edie Homepage</title>
 </head>
 
 <body>
     <header>
-      <p>Edie</p>
+      <h1>Edie</h1>
       <nav>
         <ul><li><a href="#home">Home</a></li></ul>
         <ul><li><a href="#services">Services</a></li></ul>
@@ -23,7 +24,7 @@
     <main>
       <section id="#home">
         <p>Unhappy with your website?</p>
-        <h1>We create beautiful and fast web services</h1>
+        <h2>We create beautiful and fast web services</h2>
 
         <img src="" alt="">
 
