add fix for large screen

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="icons">
           <a href="#"><img class="social_icon" src="./img/instagram.svg" alt="instagram"></a>
           <a href="#"><img class="social_icon" src="./img/linkedin.svg" alt="linkedin"></a>
-          <a href="#"><img class="social_icon" src="./img/twitter.svg" alt="twitter"></a>
+          <a class="twitter" href="#"><img class="social_icon" src="./img/twitter.svg" alt="twitter"></a>
         </div>
         
         <div id="contact" class="contact_box_footer">
