--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </main>
 
     <footer class="footer">
-      <section class="footer_cont">
+      <section>
         <div class="footer_nav">
           <ul><li><a href="#home">Home</a></li></ul>
           <ul><li><a href="#services">Services</a></li></ul>
@@ -182,14 +182,12 @@
           <ul><li><a href="#contact">Contact</a></li></ul>
         </div>
 
+        <p class="footer_social_name">Edie</p>
        
         <div class="icons">
-          <p class="footer_social_name">Edie</p>
-          <div class="social_icon_box">
-            <a href="#"><img class="social_icon" src="./img/instagram.svg" alt="instagram"></a>
-            <a href="#"><img class="social_icon" src="./img/linkedin.svg" alt="linkedin"></a>
-            <a class="twitter" href="#"><img class="social_icon" src="./img/twitter.svg" alt="twitter"></a>
-          </div>  
+          <a href="#"><img class="social_icon" src="./img/instagram.svg" alt="instagram"></a>
+          <a href="#"><img class="social_icon" src="./img/linkedin.svg" alt="linkedin"></a>
+          <a href="#"><img class="social_icon" src="./img/twitter.svg" alt="twitter"></a>
         </div>
         
         <div id="contact" class="contact_box_footer">
@@ -200,8 +198,10 @@
           </div>
         </div>
       </section>
+
+      <div class="dev_name">created by <a href="https://github.com/vivianemartini/edie-homepage-challenge" target="_blank">vivianemartini</a> - devChallenges.io</div>
     </footer>
-    <div class="dev_name">created by <a href="https://github.com/vivianemartini/edie-homepage-challenge" target="_blank">vivianemartini</a> - devChallenges.io</div>
+
 
 </body>
 </html>
