--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a  href="#home" class="center">Home</a>
           </li>
           <li id="nav-2" class="slide-out-2 center">
-            <a href="#services" class="center">About</a>
+            <a href="#services" class="center">Services</a>
           </li>
           <li id="nav-3" class="slide-out-3 center">
             <a href="#our-works" class="center">Skills</a>
